<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_plant_wizard_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PlantWizardFragment"
    android:animateLayoutChanges="true" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_plants_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_results" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_plant_wizard_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_plant_wizard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/plant_wizard_border"
            android:animateLayoutChanges="true" >

            <TextView
                android:id="@+id/tv_max_temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MaxLabel"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintBottom_toTopOf="@+id/bt_show_me_the_plants"
                app:layout_constraintEnd_toStartOf="@+id/max_temp_spinner"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

            <TextView
                android:id="@+id/tv_min_temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MinLabel"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintBottom_toTopOf="@+id/bt_show_me_the_plants"
                app:layout_constraintEnd_toStartOf="@+id/min_temp_spinner"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

            <TextView
                android:id="@+id/tv_choose_characteristics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/chooseCharacterisiticsString"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/light_filter_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_light"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/bright_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bright" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/medium_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Medium" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/low_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Low" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/direct_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Direct" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/indirect_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Indirect" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/LightRequirement"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_choose_characteristics" />

            <Button
                android:id="@+id/bt_show_me_the_plants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="Show Me The Plants!"
                android:textColor="@color/design_default_color_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min_temp_spinner" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/HumidityRequirement"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/light_filter_chip_group" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/humidity_filter_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/very_high_humidity_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/VeryHigh" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/high_humidity_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/High" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/moderate_humidity_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Moderate" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/low_humidity_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Low" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/poison_filter_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_poison"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/poisonous_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Poisonous" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/non_poisonous_filter_chip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NonPoisonous" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_poison"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/Poison"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_filter_chip_group" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/WhatTemperatureRangeYouCanProvide"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poison_filter_chip_group" />

            <Spinner
                android:id="@+id/min_temp_spinner"
                android:layout_width="83dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/max_temp_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

            <Spinner
                android:id="@+id/max_temp_spinner"
                android:layout_width="83dp"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/min_temp_spinner"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

            <TextView
                android:id="@+id/tv_min_temp_fahrenheit"
                android:layout_width="23dp"
                android:layout_height="22dp"
                android:text="@string/degreesFahrenheit"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintBottom_toTopOf="@+id/bt_show_me_the_plants"
                app:layout_constraintStart_toEndOf="@+id/min_temp_spinner"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

            <TextView
                android:id="@+id/tv_max_temp_fahrenheit"
                android:layout_width="23dp"
                android:layout_height="22dp"
                android:text="@string/degreesFahrenheit"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintBottom_toTopOf="@+id/bt_show_me_the_plants"
                app:layout_constraintStart_toEndOf="@+id/max_temp_spinner"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_plant_wizard_collapsed"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:cardBackgroundColor="#FF424242"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true" >

            <TextView
                android:id="@+id/tv_plant_wizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlantWizard"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_show_plant_wizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reopen"
                android:textColor="@color/design_default_color_background"
                app:backgroundTint="#FF424242"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_number_of_results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_plant_wizard_collapsed" />
</androidx.constraintlayout.widget.ConstraintLayout>